syntax = "proto3";

option csharp_namespace = "phoenix_gRPC";

package phoenix;

service PhoenixService {
	rpc PLC_Request(PLC_message_ELWEMA) returns (phoenix_STATUS);
}

message PLC_command {
	bool LOAD 	= 1;
	bool START 	= 2;
	bool END 	= 3;
	bool ABORT 	= 4;
	bool RESET 	= 5;
}

enum PART_PROGRAM {
	CoverFace	= 0; //1
	FrontFace	= 1; //2
	IntakeFace	= 2; //3
	DeckFace	= 3; //4
	ExaustFace	= 4; //5
	RearFace	= 5; //6
}

message Part {
	uint32 PartType				= 1;
	PART_PROGRAM ProgramID		= 2; //VERITY OFF BY ONE ERROR!!!
	string Pun					= 3;
	string GMPartNumber			= 4;
	string Module				= 5;
	string PlantCode			= 6;
}

message TimeStamp {
	string Year		= 1;
	string Month	= 2;
	string Day		= 3;
	string Minute	= 4;
	string Second	= 5;
}

message QC_OP_ELWEMA {
	string OP110CNC		= 1 ;
	string OP120CNC		= 2 ;
	string OP130CNC		= 3 ;
	string OP140CNC		= 4 ;
	string OP310DECKCNC	= 5 ;
	string OP320CNC		= 6 ;
	string OP330CNC		= 7 ;
	//350?
	string OP340CNC		= 8 ;
	string OP360CNC		= 9 ;
	string OP370CNC		= 10;
	string OP380CNC		= 11;
	string OP390CNC		= 12;
	string ScoutPart		= 13;
}

message META_PROGRAM_ELWEMA {
	Part partData			= 1;
	TimeStamp PLCTimeStamp	= 2;
	QC_OP_ELWEMA QC_OP		= 3;
}

message PLC_message_ELWEMA{
	PLC_command command = 1;
	META_PROGRAM_ELWEMA META_PROGRAM = 2;
}

message phoenix_STATUS {
	bool READY		= 1;
	bool BUSY		= 2;
	bool DONE		= 3;
	bool PASS		= 4;
	bool FAIL		= 5;
	bool FAULTED	= 6;
}

message phoenix_RESULTS {
	string results	= 1;
}
